# ERMESS

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Battery.py  ERMESS_GA.py  ERMESS_PV_model.py  ERMESS_Pro.py  ERMESS_Research.py  ERMESS_Windmodel.py  ERMESS_classes.py  ERMESS_cost_functions.py  ERMESS_evaluation.py  ERMESS_evaluation_operators.py  ERMESS_frontal_evolution.py  ERMESS_frontal_initialisation.py  ERMESS_functions.py  ERMESS_functions_2.py  ERMESS_functions_pro.py  ERMESS_meteo.py  ERMESS_operators.py  ERMESS_parallel_processing.py  Modif_documentation.txt  PMS.py  README.md  conf.py  graphs.py  output_ERMESS_pro.xlsx  pyproject.toml
ERMESS_scripts/: __init__.py
ERMESS_scripts/cost/: ERMESS_cost_functions.py  __init__.py
ERMESS_scripts/data/: ERMESS_Load_model.py  ERMESS_PV_model.py  ERMESS_Wind_model.py  ERMESS_meteo.py  config_profiles.py  data_builder.py  data_classes.py  data_parsers.py  data_reader.py  data_validation.py  indices.py  read_excel.py
ERMESS_scripts/energy_management_model/: ERMESS_EMS_models.py  ERMESS_storages_model.py  __init__.py
ERMESS_scripts/energy_model/: ERMESS_EMS_models.py  ERMESS_storages_model.py  __init__.py
ERMESS_scripts/energy_production_model/: ERMESS_PV_model.py  ERMESS_Wind_model.py
ERMESS_scripts/evolutionnary_core/: ERMESS_MILP_resolution.py  ERMESS_classes.py  ERMESS_evolutionnary_algorithm.py  ERMESS_evolutionnary_operators.py  ERMESS_functions.py  __init__.py  (+4 more)
docs/: conf.py  index.rst  requirements.txt
ermess.egg-info/: PKG-INFO  SOURCES.txt
old scripts/: Battery2.py  ERMESS_classes2.py
(+938 files in other folders)
