[project]
name = "ermess"
version = "1.0.0"
description = "Energy system modeling and evolutionary optimization framework"
authors = [
    { name = "Josselin Le Gal La Salle" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ERMESS_scripts*"]
exclude = [
    "ERMESS_scripts.legacy*",
"tests*"
]